template-script/multiuser-multinsg-template-base.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_lkm_dna_Win_VM_name": {
            "defaultValue": "lkm-dna-Win-VM",
            "type": "String"
        },
        "storageAccounts_lkmdnaenvrgdiag_name": {
            "defaultValue": "lkmdnaenvrgdiag",
            "type": "String"
        },
        "virtualMachines_lkm_dna_Linux_VM_name": {
            "defaultValue": "lkm-dna-Linux-VM",
            "type": "String"
        },
        "virtualNetworks_LKM_DNA_ENV_VNet_name": {
            "defaultValue": "LKM-DNA-ENV-VNet",
            "type": "String"
        },
        "networkInterfaces_lkm_dna_win_nic_name": {
            "defaultValue": "lkm-dna-win-nic",
            "type": "String"
        },
        "networkInterfaces_lkm_dna_linux_nic_name": {
            "defaultValue": "lkm-dna-linux-nic",
            "type": "String"
        },
        "networkSecurityGroups_lkm_dna_Win_VM_nsg_name": {
            "defaultValue": "lkm-dna-Win-VM-nsg",
            "type": "String"
        },
        "networkSecurityGroups_lkm_dna_Linux_VM_nsg_name": {
            "defaultValue": "lkm-dna-Linux-VM-nsg",
            "type": "String"
        },
        "publicIPAddresses_lkm_dna_Win_VM_public_ip_name": {
            "defaultValue": "lkm-dna-Win-VM-public-ip",
            "type": "String"
        },
        "adminUsername": {
            "type": "String",
            "metadata": {
                "description": "Admin User for the Virtual Machine."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Password for the Virtual Machine."
            }
        },

        "windowsOSVersion": {
            "type": "string",
            "defaultValue": "2012-R2-Datacenter",
            "allowedValues": [
                "2008-R2-SP1",
                "2012-Datacenter",
                "2012-R2-Datacenter",
                "2016-Nano-Server",
                "2016-Datacenter-with-Containers",
                "2016-Datacenter",
                "2019-Datacenter"
            ],
            "metadata": {
                "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
            }
        },
		"ubuntuLinuxOSVersion": {
            "type": "string",
            "defaultValue": "18.04-LTS",
            "allowedValues": [
                "14.04.5-LTS",
                "14.04.5-DAILY-LTS",
                "16.04-LTS",
                "16.04-DAILY-LTS",
                "18.04-LTS",
                "18.04-DAILY-LTS"
            ],
            "metadata": {
                "description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
            }
        },
        "linuxVMSize": {
            "type": "string",
            "defaultValue": "Standard_D2s_v3",
            "metadata": {
                "description": "Size of the virtual machine."
            }
        },
        "windowsVMSize": {
            "type": "string",
            "defaultValue": "Standard_D2s_v3",
            "metadata": {
                "description": "Size of the virtual machine."
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "scriptLocation": {
            "defaultValue": "https://raw.githubusercontent.com/rajuchal/multiuser_env_template/master/",
            "type": "string",
            "metadata": {
                "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated."
            }
        },
        "no_of_win_vm": {
            "type": "int",
            "defaultValue": 2,
            "metadata": {
                "description": "Number of Windows VM Instances"
            }
        },

        "no_of_linux_vm": {
            "type": "int",
            "defaultValue": 2,
            "metadata": {
                "description": "Number of Linux VM Instances"
            }
        }

    },
    "variables": {
        "storageAccountName": "[concat('dnastorage', uniquestring(resourceGroup().id))]",
        "windowsNICName": "lkm-dna-win-nic",
        "linuxNICName": "lkm-dna-linux-nic",
        "virtualNetworkName": "LKM-DNA-ENV-VNet",
        "vNet1AddressPrefix": "10.1.0.0/16",
        "windowsSubnetName": "lkm-dna-env-win-subnet",
        "windowsSubnetPrefix": "10.1.1.0/24",
        "linuxSubnetName": "lkm-dna-env-linux-subnet",
        "linuxSubnetPrefix": "10.1.2.0/24",
        "windowsPublicIPAddressName": "windowsPublicIP",
        "windowsVMName": "lkm-dna-Win-VM",
        "linuxVMName": "lkm-dna-Linux-VM",
        "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('windowsSubnetName'))]",
        "windowsNetworkSecurityGroupName": "lkm-dna-Win-VM-nsg",
        "linuxNetworkSecurityGroupName": "lkm-dna-Linux-VM-nsg"

    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'), copyIndex())]",
            "location": "[parameters('location')]",
            "tags": {
                "Name": "[concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'), copyIndex())]"
            },
            "copy": {
                "name": "linuxVM_NSG_Loop",
                "count": "[parameters('no_of_linux_vm')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "10.1.1.0/24",
                            "destinationAddressPrefix": "10.1.2.0/24",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "10.1.1.0/24",
                            "destinationAddressPrefix": "10.1.1.0/24",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'), copyIndex())]",
            "location": "[parameters('location')]",
            "tags": {
                "Name": "[concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'), copyIndex())]"
            },
            "copy": {
                "name": "windowsVM_NSG_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },

            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('publicIPAddresses_lkm_dna_Win_VM_public_ip_name'),copyIndex())]",
            "location": "[parameters('location')]",
            "tags": {
                "Name": "[concat('lkm-dna-Win-VM-public-ip',copyIndex())]"
            },
            "copy": {
                "name": "windowsVM_Public_IP_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-05-01",
            "name": "[parameters('virtualNetworks_LKM_DNA_ENV_VNet_name')]",
            "location": "[parameters('location')]",
            "tags": {
                "Name": "LKM-DNA-ENV-VNet"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNet1AddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('windowsSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('windowsSubnetPrefix')]",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "[variables('linuxSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('linuxSubnetPrefix')]",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "name": "[variables('storageAccountName')]",
            "location": "[parameters('location')]",
            "tags": {
                "Name": "lkm-dna-env-storage"
            },
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": true,
                "encryption": {
                    "services": {
                        "file": {
                            "keyType": "Account",
                            "enabled": true
                        },
                        "blob": {
                            "keyType": "Account",
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'),copyIndex(), '/HTTP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'), copyIndex()))]"
            ],
            "copy": {
                "name": "linuxVM_NSG_SecurityRules_Loop",
                "count": "[parameters('no_of_linux_vm')]"
            },
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "10.1.1.0/24",
                "destinationAddressPrefix": "10.1.2.0/24",
                "access": "Allow",
                "priority": 320,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'),copyIndex(),'/HTTP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'), copyIndex()))]"
            ],
            "copy": {
                "name": "windowsVM_NSG_SecurityRules_HTTP_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 320,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'),copyIndex(), '/RDP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'),copyIndex()))]"
            ],
            "copy": {
                "name": "windowsVM_NSG_SecurityRules_RDP_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'),copyIndex(), '/SSH')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'),copyIndex()))]"
            ],
            "copy": {
                "name": "linuxVM_NSG_SecurityRules_SSH_Loop",
                "count": "[parameters('no_of_linux_vm')]"
            },
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "10.1.1.0/24",
                "destinationAddressPrefix": "10.1.2.0/24",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'), '/lkm-dna-env-linux-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.1.2.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'), '/lkm-dna-env-win-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.1.1.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices",
            "apiVersion": "2019-06-01",
            "name": "[concat(variables('storageAccountName'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
            ],
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "properties": {
                "cors": {
                    "corsRules": []
                },
                "deleteRetentionPolicy": {
                    "enabled": false
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/fileServices",
            "apiVersion": "2019-06-01",
            "name": "[concat(variables('storageAccountName'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
            ],
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "name": "[concat(parameters('virtualMachines_lkm_dna_Linux_VM_name'),copyIndex())]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('networkInterfaces_lkm_dna_linux_nic_name'),copyIndex()))]",
                "[resourceId('Microsoft.Storage/StorageAccounts', variables('storageAccountName'))]"
            ],
            "tags": {
                "Name": "[concat('lkm-dna-Linux-VM',copyIndex())]"
            },
            "copy": {
                "name": "linuxVM_VM_Loop",
                "count": "[parameters('no_of_linux_vm')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('linuxVMSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "[parameters('ubuntuLinuxOSVersion')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat('Linux_VM', copyIndex(),'_OSDisk')]",
                        "osType": "Linux",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"

                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[concat(parameters('virtualMachines_lkm_dna_Linux_VM_name'),copyIndex())]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true

                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('networkInterfaces_lkm_dna_linux_nic_name'),copyIndex()))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https://', variables('storageAccountName'), '.blob.core.windows.net/')]"
                    }
                }
                
            }
        },


        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "name": "[concat(parameters('virtualMachines_lkm_dna_Win_VM_name'),copyIndex())]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('networkInterfaces_lkm_dna_win_nic_name'),copyIndex()))]",
                "[resourceId('Microsoft.Storage/StorageAccounts',variables('storageAccountName'))]"
            ],
            "tags": {
                "Name": "[concat('lkm-dna-Win-VM',copyIndex())]"
            },
            "copy": {
                "name": "windowsVM_VM_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('windowsVMSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "[parameters('windowsOSVersion')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat('Windows_VM', copyIndex(),'_OSDisk')]",
                        "osType": "Windows",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"

                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[concat(parameters('virtualMachines_lkm_dna_Win_VM_name'),copyIndex())]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true

                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('networkInterfaces_lkm_dna_win_nic_name'),copyIndex()))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https://', variables('storageAccountName'), '.blob.core.windows.net/')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkInterfaces_lkm_dna_linux_nic_name'),copyIndex())]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'), 'lkm-dna-env-linux-subnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'),copyIndex()))]"
            ],
            "tags": {
                "Name": "[concat('lkm-dna-Linux-VM-nic',copyIndex())]"
            },
            "copy": {
                "name": "linuxVM_NIC_Loop",
                "count": "[parameters('no_of_linux_vm')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat('Linux_ipconfig',copyIndex())]",
                        "properties": {

                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'), 'lkm-dna-env-linux-subnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Linux_VM_nsg_name'),copyIndex()))]"
                }
            }
        },

        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('networkInterfaces_lkm_dna_win_nic_name'),copyIndex())]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('publicIPAddresses_lkm_dna_Win_VM_public_ip_name'),copyIndex()))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'), 'lkm-dna-env-win-subnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'),copyIndex()))]"
            ],
            "tags": {
                "Name": "[concat('lkm-dna-Win-VM-NIC',copyIndex())]"
            },
            "copy": {
                "name": "windowsVM_NIC_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[concat('Windows_ipconfig',copyIndex())]",
                        "properties": {

                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('publicIPAddresses_lkm_dna_Win_VM_public_ip_name'),copyIndex()))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_LKM_DNA_ENV_VNet_name'), 'lkm-dna-env-win-subnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('networkSecurityGroups_lkm_dna_Win_VM_nsg_name'),copyIndex()))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_lkm_dna_Linux_VM_name'),copyIndex(),'/installhadoopscript')]",
            "apiVersion": "2019-07-01",
            "location": "[parameters('location')]",
            "copy": {
                "name": "linuxVM_extensions_Loop",
                "count": "[parameters('no_of_linux_vm')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('virtualMachines_lkm_dna_Linux_VM_name'),copyIndex())]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('networkInterfaces_lkm_dna_linux_nic_name'),copyIndex())]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "CustomScript",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[concat(parameters('scriptLocation'), 'hadoopenv-script.sh')]"
                    ],
                    "commandToExecute": "[concat('sh hadoopenv-script.sh ',parameters('adminUsername'))]"
                }
            }
        },

        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_lkm_dna_Win_VM_name'),copyIndex(),'/installWinTools')]",
            "apiVersion": "2019-07-01",
            "location": "[parameters('location')]",
            "copy": {
                "name": "windowsVM_extension_Loop",
                "count": "[parameters('no_of_win_vm')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachines_lkm_dna_Win_VM_name'),copyIndex())]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('networkInterfaces_lkm_dna_win_nic_name'),copyIndex())]"
            ],

            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.10",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[concat(parameters('scriptLocation'), 'windowstools.ps1')]"
                    ],
                    "commandToExecute": "powershell.exe -ExecutionPolicy Unrestricted -File ./windowstools.ps1"
                }
            }
        }
    ],
    "outputs": {
        "adminUsername": {
            "type": "string",
            "value": "[parameters('adminUsername')]"
        }

    }

}
